# HappyBirthday

./: .env.dev  .env.sample  .gitignore  README.md  celery-beat.Dockerfile  celery.Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml
config/: settings.py  urls.py
employees/: forms.py  models.py  urls.py  views.py
employees/templates/employees/: employees_confirm_delete.html  employees_form.html  employees_list.html
employees/templatetags/: employees_tags.py
main/: urls.py  views.py
main/templates/main/: base.html  main.html
main/templates/main/includes/: head.html
static/css/: sign-in.css
subscriptions/: forms.py  models.py  services.py  tasks.py  urls.py  views.py
subscriptions/templates/subscriptions/: subscriptions_confirm_delete.html  subscriptions_form.html  subscriptions_list.html
users/: forms.py  models.py  tasks.py  urls.py  views.py
users/templates/users/: login.html  recovery_password.html  register.html  user_form.html
